[Tools] Change package name of converted code